# s24-meshers

./: .bumpversion.cfg  .gitignore  CONTRIBUTORS  README.md  build.sh  bumpversion.cfg  clean.sh  index.md  pyPI_guide.txt  pyproject.toml  release.sh  test.sh
.github/workflows/: Container_README.md  Dockerfile  build-release.yml  build.yml  lint-test.yml  py-publish.yml  python-package.txt  python-package.yml
docs/: ClassDiagram.txt  CoarsenDiagram.txt  TimingPlot.py  _config.yml  index.md  pyMGMClassDiagram.txt
pymgm/src/: sample.py
pymgm/test/: test_sample.py  testsample.py
src/pymgm_test/: Demo.py  sample.py
src/pymgm_test.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
test/: mgmStruct_before.mat  pytest.ini  sqrpoisson.py  test_binding_structures.py  test_elim.py  test_gallery.py  test_interpOp.py  test_mgm_abstract.py  test_plot.py  test_polyBasis2D.py  test_polyHarmonic.py  test_sample.py  test_squarepoisson.py  uh_after_multi.mat
test/afun_data/: uh_after_afun_bicgstab.mat
test/afuncon_data/: afuncon_uh_after.mat  afuncon_uh_before.mat
test/interpOp_data/: coarseparams_1.mat  coarseparams_2.mat  coarseparams_3.mat  fineparams_1.mat  fineparams_2.mat  fineparams_3.mat  sparsemat_1.mat  sparsemat_2.mat  sparsemat_3.mat
test/multievel_data/: fh_before_multi.mat  mgmStruct_before.mat  uh_after_multi.mat  uh_before_multi.mat
test/solve_data/: fh_before_solve.mat  fh_before_solve_bicgstab.mat  levelsData_before_solve.mat  relres_after_solve.mat  relres_after_solve_bicgstab.mat  resvec_after_solve.mat  resvec_after_solve_bicgstab.mat  (+2 more)
(+50 files in other folders)
