[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pymgm-test"
version = "0.1.3"
description = "An open source python package for implementing the MGM method for elliptic equations on point cloud surfaces"
authors = [
  {name = "Grady Wright", email = "gradywright@boisestate.edu"}
]
license = { file = "LICENSE" }
readme = "README.md"
keywords = ["MGM", "elliptic equations", "point cloud"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/cs481-ekh/s24-meshers"
Issues = "https://github.com/cs481-ekh/s24-meshers/.github/ISSUE_TEMPLATE"
